moved the auth pages to layout

--- a/src/components/screens/auth/AuthForm/AuthForm.module.scss
+++ b/src/components/screens/auth/AuthForm/AuthForm.module.scss
@@ -20,7 +20,7 @@
     height: 56px;
     font-family: Inter, sans-serif;
     font-weight: 500;
-    color: #cbcbcb;
+    color: #222;
     border: 1px solid #c8c8c8;
     background-color: inherit;
   }
