refresh auth pages code by resetPassword part

--- a/src/app/[locale]/(auth)/layout.module.scss
+++ b/src/app/[locale]/(auth)/layout.module.scss
@@ -70,6 +70,13 @@
   color: #3c4242;
 }
 
+.resendBtn {
+  position: relative;
+  font-weight: 600;
+  color: #950707;
+  border-bottom: 2px solid #950707;
+}
+
 .underline {
   position: relative;
   color: #178eed;
