--- a/src/components/ui/Button/Button.module.scss
+++ b/src/components/ui/Button/Button.module.scss
@@ -4,6 +4,11 @@
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
+  cursor: pointer;
+  &:disabled {
+    pointer-events: none;
+    opacity: 0.7;
+  }
 }
 
 .primary {
