--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -29,10 +29,14 @@ main {
     --secondary-400: rgb(76, 76, 76);
     --secondary-300: rgb(118, 118, 118);
     --secondary-200: rgb(161, 161, 161);
+    --secondary-100: rgb(203, 203, 203);
 
     --primary-200: rgb(213, 156, 156);
+    --primary-300: rgb(170, 57, 57);
 
+    --neutral-000: rgb(250, 250, 250);
     --neutral-100: rgb(228, 228, 228);
+    --neutral-200: rgb(200, 200, 200);
     --neutral-300: rgb(173, 173, 173);
     --neutral-500: rgb(118, 118, 118);
 
