--- a/src/components/screens/checkout/ShippingPicker/ShippingPicker.module.scss
+++ b/src/components/screens/checkout/ShippingPicker/ShippingPicker.module.scss
@@ -26,6 +26,8 @@
   transition: all 0.3s ease-in-out;
   padding: 1.5rem;
 
+  cursor: pointer;
+
   display: flex;
   align-items: center;
 
@@ -75,7 +77,7 @@
 
   > div:last-child {
     > label {
-      @apply font-inter font-bold text-lg;
+      @apply font-inter font-bold text-lg cursor-pointer;
       margin-bottom: 0.625rem;
       color: var(--text-color);
     }
@@ -95,5 +97,3 @@
     }
   }
 }
-
-
