--- a/src/components/ui/Button/Button.module.scss
+++ b/src/components/ui/Button/Button.module.scss
@@ -32,7 +32,7 @@
   }
 }
 
-.gray {
+.gray, [type=submit].gray {
   border: 0.5px solid var(--neutral-300);
-  background: var(--neutral-100);
+  background: var(--neutral-100) ;
 }
