type fixes. Policy and rewards pages are done

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -31,6 +31,12 @@ main {
     --secondary-200: rgb(161, 161, 161);
     --secondary-100: rgb(203, 203, 203);
 
+    --info-100: rgb(209, 232, 251);
+    --info-200: rgb(162, 210, 248);
+    --info-300: rgb(116, 187, 244);
+    --info-400: rgb(69, 165, 241);
+    --info-500: rgb(23, 142, 237);
+
     --primary-200: rgb(213, 156, 156);
     --primary-300: rgb(170, 57, 57);
 
