--- a/src/app/[locale]/(profile)/settings/page.module.scss
+++ b/src/app/[locale]/(profile)/settings/page.module.scss
@@ -38,6 +38,7 @@
     column-gap: 2rem;
     row-gap: 1.5rem;
     grid-template-columns: 395fr 501fr;
+    width: 100%;
 
     > div:first-child {
       grid-area: first-last-name;
