--- a/src/components/common/Card/Card.module.scss
+++ b/src/components/common/Card/Card.module.scss
@@ -8,10 +8,10 @@
     right: 16px;
     z-index: 5;
 
-    &:hover svg {
+   cale: 1.1;
+    } &:hover svg {
       fill: #d59c9c;
-      // scale: 1.1;
-    }
+      // s
 
     &:hover svg.choosen {
       fill: #950707;
