--- a/src/components/common/CategoriesDisclosure/CategoriesDisclosure.module.scss
+++ b/src/components/common/CategoriesDisclosure/CategoriesDisclosure.module.scss
@@ -1,3 +1,4 @@
+@import '@/styles/mixins.scss';
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -38,7 +39,7 @@
     font-size: 1rem;
     font-weight: 500;
     line-height: 125%; /* 20/16 */
-    transition: font-weight 0.150s ease-in-out;
+    transition: font-weight 0.15s ease-in-out;
 
     &.link--red {
       color: var(--red-color);
@@ -46,6 +47,29 @@
 
     &:hover {
       font-weight: 600;
+    }
+  }
+}
+
+.sidebar {
+  > :not([hidden]) ~ :not([hidden]) {
+    @include adaptive-value('margin-top', 68, 32);
+  }
+  > div:first-child {
+    h4 {
+      color: var(--text-color);
+      font-family: var(--font-montserrat), sans-serif;
+      font-size: 1.25rem;
+      font-weight: 600;
+      line-height: 120%;
+    }
+    p {
+      font-family: var(--font-inter), sans-serif;
+      margin-top: 0.75rem;
+      color: var(--text-color);
+      font-size: 1rem;
+      font-weight: 500;
+      line-height: 125%; /* 20/16 */
     }
   }
 }
