--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -24,6 +24,7 @@ main {
     --red-color: #950707; // rgb(149, 7, 7)
     --text-color: #222222; // rgb(34,34,34)
     --white-color: rgb(250, 250, 250);
+    
 
     --secondary-500: rgb(34, 34, 34);
     --secondary-400: rgb(76, 76, 76);
@@ -36,9 +37,10 @@ main {
     --info-300: rgb(116, 187, 244);
     --info-400: rgb(69, 165, 241);
     --info-500: rgb(23, 142, 237);
-
+    
     --primary-200: rgb(213, 156, 156);
     --primary-300: rgb(170, 57, 57);
+    --primary-500: rgb(149, 7, 7);
 
     --neutral-000: rgb(250, 250, 250);
     --neutral-100: rgb(228, 228, 228);
