--- a/src/components/common/Breadcrumbs/Breadcrumbs.module.scss
+++ b/src/components/common/Breadcrumbs/Breadcrumbs.module.scss
@@ -1,17 +1,26 @@
 .wrapper {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+
+  > button {
+    display: flex;
+    width: 16px;
+    height: 16px;
+  }
+
   > ol {
     display: flex;
-   >  li {
+    > li {
       font-size: 0.75rem;
       font-weight: 400;
       line-height: 125%; /* 15/12 */
       letter-spacing: 0.1rem;
       color: rgb(76, 76, 76);
       font-family: Montserrat, sans-serif;
-			&.last {
-				color: var(--red-color);
-			}
+      &.last {
+        color: var(--red-color);
+      }
     }
   }
 }
-
