--- a/src/components/screens/shop/Card/Card.module.scss
+++ b/src/components/screens/shop/Card/Card.module.scss
@@ -50,8 +50,8 @@
   cursor: pointer;
   transition: all 0.3s ease-in-out;
   position: absolute;
-  top:0;
-  left:0;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
 }
@@ -94,12 +94,13 @@
 .color {
   position: relative;
   transition: all 0.3s ease-in-out;
+
+  margin-right: 0.375rem;
+  cursor: default;
   width: 0.5rem;
   height: 0.5rem;
   border: 1px solid;
   border-radius: 50%;
-
-  margin-right: 0.375rem;
 
   > input {
     appearance: none;
@@ -110,10 +111,12 @@
     top: 0;
     left: 0;
     z-index: 2;
-    cursor: pointer;
   }
 
   &--possible-change {
+    input {
+      cursor: pointer;
+    }
     &:hover {
       scale: 1.15;
     }
