--- a/src/components/screens/profile/Order/Order.module.scss
+++ b/src/components/screens/profile/Order/Order.module.scss
@@ -84,12 +84,16 @@
   }
 }
 
+.more svg {
+  transform: rotate(180deg);
+}
+
 .details {
   margin-top: 24px;
   padding: 12px;
   width: 501px;
   grid-column: 1 / span 2;
-  grid-row: 5;
+  grid-row: 6;
   background-color: white;
 
   & > h3 {
@@ -123,7 +127,7 @@
   padding: 34.5px 24px;
   width: 395px;
   grid-column: 2;
-  grid-row: 5;
+  grid-row: 6;
   display: grid;
   grid-template-columns: auto auto;
   grid-template-rows: auto auto auto auto 48px;
@@ -148,7 +152,7 @@
 .total {
   margin-top: 6px;
   grid-column: 1 / span 2;
-  grid-row: 5;
+  grid-row: 6;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
@@ -172,4 +176,12 @@
   background-color: #fafafa;
   color: #222;
   border: 1px solid #222;
+}
+
+.itemList {
+  grid-column: 1 / span 2;
+  grid-row: 5;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
