--- a/src/screens/product/Info/Info.module.scss
+++ b/src/screens/product/Info/Info.module.scss
@@ -5,3 +5,87 @@
     flex: 1;
   }
 }
+
+.info {
+  @apply flex flex-col;
+  &__top {
+    @apply flex items-center justify-between;
+  }
+}
+
+.id {
+  @apply font-inter text-xs;
+  color: var(--secondary-300);
+}
+
+.rating {
+  @apply flex items-center;
+  gap: 5.33px;
+  height: 16px;
+
+  & > div {
+    &:last-child {
+      @apply font-inter text-xs font-normal underline;
+      color: var(--secondary-500);
+      letter-spacing: 0px;
+    }
+  }
+}
+
+
+.name {
+  @apply mt-4 font-montserrat  font-semibold;
+  color: rgb(51, 51, 51);
+  font-size: 1.25rem;
+  line-height: 156%;
+}
+
+
+.price {
+  @apply font-montserrat font-semibold text-xl mt-4;
+  color: var(--text-color);
+}
+
+
+.colors {
+  @apply mt-8 flex flex-col gap-4;
+
+  &__current {
+    @apply font-inter text-md font-semibold;
+    color: var(--text-color);
+  }
+  &__list {
+    @apply flex gap-3;
+  }
+}
+
+
+
+.color {
+  @apply w-8 h-8 relative flex items-center justify-center;
+
+
+
+  &--active {
+    border: 0.5px solid var(--secondary-500);
+  }
+
+  > div {
+    @apply w-4 h-4 rounded-full ;
+    transition: 0.3s scale linear;
+
+    > input {
+      @apply absolute w-full h-full top-0 left-0 appearance-none opacity-0 cursor-pointer;
+      z-index: 2;
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
