size picker was added(without sizes guide)

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -46,6 +46,7 @@ main {
     --neutral-100: rgb(228, 228, 228);
     --neutral-200: rgb(200, 200, 200);
     --neutral-300: rgb(173, 173, 173);
+    --neutral-400: rgb(145, 145, 145);
     --neutral-500: rgb(118, 118, 118);
 
     --background: rgb(250, 250, 250);
