--- a/src/screens/product/Info/Info.module.scss
+++ b/src/screens/product/Info/Info.module.scss
@@ -49,11 +49,6 @@
 
 .colors {
   @apply mt-8 flex flex-col gap-4;
-
-  &__current {
-    @apply font-inter text-md font-semibold;
-    color: var(--text-color);
-  }
   &__list {
     @apply flex gap-3;
   }
@@ -64,8 +59,6 @@
 .color {
   @apply w-8 h-8 relative flex items-center justify-center;
 
-
-
   &--active {
     border: 0.5px solid var(--secondary-500);
   }
@@ -73,11 +66,6 @@
   > div {
     @apply w-4 h-4 rounded-full ;
     transition: 0.3s scale linear;
-
-    > input {
-      @apply absolute w-full h-full top-0 left-0 appearance-none opacity-0 cursor-pointer;
-      z-index: 2;
-    }
   }
 }
 
@@ -85,7 +73,48 @@
 
 
 
+.sizes {
+  @apply flex flex-col gap-4;
+  margin-top: 25px;
+
+  &__list{
+    @apply flex overflow-auto;
+    max-width: 610px;
+    gap:13.7px;
+  }
+}
+
+.size {
+  @apply p-3 flex items-center justify-center transition-all relative;
+  min-width: 5.625rem;
+
+  border: 0.5px solid var(--neutral-400);
+
+  > span {
+    @apply font-inter text-md font-semibold transition-all;
+    color: var(--text-color);
+  }
+
+  &--active {
+    background-color: var(--secondary-500);
+    border-color: var(--secondary-500);
+    > span {
+      color: var(--white-color);
+    }
+  }
+}
 
 
+.colors__current, .sizes__current {
+  @apply font-inter text-md font-semibold;
+  color: var(--text-color);
+}
+
+.color > div > input , .size > input {
+
+    @apply absolute w-full h-full top-0 left-0 appearance-none opacity-0 cursor-pointer;
+    z-index: 2;
+
+}
 
 
