--- a/src/features/product/components/Info/Info.module.scss
+++ b/src/features/product/components/Info/Info.module.scss
@@ -35,7 +35,7 @@
 
 .name {
   @apply mt-4 font-montserrat  font-semibold;
-  color: rgb(51, 51, 51);
+  color: var(--secondary-450);
   font-size: 1.25rem;
   line-height: 156%;
 }
