Email form and functionality to send reset password code on email were added. Apollo client configuration change

--- a/src/features/auth/components/SignInForm/SignInForm.module.scss
+++ b/src/features/auth/components/SignInForm/SignInForm.module.scss
@@ -6,7 +6,7 @@
 }
 
 .password__forgot {
-  @apply font-inter text-md font-normal text-end flex-1;
+  @apply font-inter text-md font-normal ;
   color: var(--secondary-300);
   transition: all 0.3s ease-in-out;
 
