--- a/src/features/auth/components/SignUpForm/SignUpForm.module.scss
+++ b/src/features/auth/components/SignUpForm/SignUpForm.module.scss
@@ -1,8 +1,15 @@
 .form {
   @apply w-full;
-  > p:first-of-type {
-    @apply mb-8 mt-3;
-  }
+}
+
+.title {
+  @apply font-montserrat text-3xl font-bold;
+  color: var(--secondary-450);
+}
+
+.undertitle {
+  @apply font-inter text-md font-normal mb-8 mt-3;
+  color: var(--secondary-200);
 }
 
 .checkboxes {
@@ -13,3 +20,27 @@
   }
 }
 
+.password {
+  @apply mt-6 flex flex-col;
+  > label {
+    @apply mb-3;
+  }
+}
+
+.confirmPassword {
+  @apply min-h-[114px] mt-6.5;
+}
+
+.submitBtn {
+  @apply w-full mt-12 py-[15px];
+}
+
+.alreadyHave {
+  @apply text-center  mt-6.5 text-base font-inter font-medium;
+  color: rgb(60, 66, 66);
+
+  > a {
+    @apply underline;
+    color: var(--info-500);
+  }
+}
