--- a/src/components/ui/Button/Button.module.scss
+++ b/src/components/ui/Button/Button.module.scss
@@ -11,9 +11,9 @@
   }
 }
 
-.primary {
+.primary, .primary[type=submit] {
   border: 1px solid var(--text-color);
-  background: var(--text-color);
+  background: var(--text-color) ;
   color: var(--neutral-000);
   transition: all 0.3s ease-in-out;
 
