--- a/src/features/auth/components/SocialLoginButtons/SocialLoginButtons.module.scss
+++ b/src/features/auth/components/SocialLoginButtons/SocialLoginButtons.module.scss
@@ -31,7 +31,7 @@
 }
 
 .button {
-  @apply bg-white flex items-center justify-center gap-3.5 text-lg font-inter font-medium py-4 w-full;
+  @apply px-2 bg-white flex items-center justify-center gap-3.5 text-lg font-inter font-medium py-4 w-full;
   border: 1px solid var(--neutral-200);
   color: var(--secondary-400);
 }
