--- a/src/components/ui/Button/Button.module.scss
+++ b/src/components/ui/Button/Button.module.scss
@@ -11,7 +11,7 @@
   }
 }
 
-.primary {
+.primary, .primary[type=submit]  {
   border: 1px solid var(--text-color);
   background: var(--text-color);
   color: var(--neutral-000);
@@ -33,7 +33,7 @@
 }
 
 .gray,
-[type='submit'].gray {
+[type=submit].gray {
   border: 0.5px solid var(--neutral-300);
   background: var(--neutral-100);
 }
