Settings page styles fix

--- a/src/app/[locale]/(profile)/settings/page.module.scss
+++ b/src/app/[locale]/(profile)/settings/page.module.scss
@@ -15,7 +15,7 @@
 }
 
 .form .phone-field .phone-input {
-  @apply text-lg font-normal font-inter;
+  @apply text-md font-normal font-inter;
   width: 100%;
   padding: 0.9375rem 1.5rem;
   border: 0.5px solid var(--neutral-300);
